--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.9.4",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
